--- a/package.json
+++ b/package.json
@@ -11,18 +11,19 @@
 		"start": "node server.js"
 	},
 	"dependencies": {
-		"express": "^4.16.4",
-		"cors": "^2.8.5",
-		"body-parser": "^1.18.3",
-		"mongodb": "^3.1.10",
-		"helmet": "^3.15.0",
-    "pug": "^2.0.3",
-    "passport": "^0.4.0",
-     "express-session": "^1.15.6",
-    "passport-local": "^1.0.0"
+		"express": "^4.14.1",
+		"cors": "^2.8.1",
+		"body-parser": "^1.16.0",
+		"mongodb": "^2.2.22",
+		"helmet": "^3.4.0",
+    "pug": "0.1.0",
+    "passport": "^0.3.2",
+     "express-session": "^1.15.0",
+    "passport-local": "^1.0.0",
+    "bcrypt": "3.0.3"
 	},
 	"engines": {
-		"node": "8.x"
+		"node": "4.4.3"
 	},
 	"repository": {
 		"type": "git",
